--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="tag-4"></div>
     </div>
     <div class="parent">
-      <div id="tag-5" class="slick"></div> y
+      <div id="tag-5" class="slick"></div> 
     </div>
     <div class="parent">
       <div></div>
