--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" href="css/paint.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 </head>
-<body>
+<body>body div#wall div.parent div > #tag-7.slick {
+  background: url(../images/tag-7.png) no-repeat;
+  z-index: 1;
+  display: block;
+}
+
   <div id="wall">
     <div class="tag-1"></div>
     <div id="tag-2"></div>
